Added Source-repository section to .cabal
Ignore-this: 2dfa7a0afbb4d2afb6f4c0e3cc75e208

darcs-hash:20090318120452-4237f-7921797c7089c44191c4aaf2980105b5e1ef5081.gz

--- a/dstring.cabal
+++ b/dstring.cabal
@@ -18,6 +18,10 @@ Cabal-version:          >= 1.2
 Build-Type:             Simple
 Stability:              experimental
 
+Source-repository head
+  Type:     darcs
+  Location: http://code.haskell.org/~basvandijk/code/dstring
+
 Library
   Build-Depends:        base, dlist
   Exposed-modules:      Data.DString
