--- a/dstring.cabal
+++ b/dstring.cabal
@@ -12,7 +12,7 @@ License:       	    BSD3
 License-file:  	    LICENSE
 Author:        	    Bas van Dijk <v.dijk.bas@gmail.com>
 Maintainer:    	    Bas van Dijk <v.dijk.bas@gmail.com>
-Copyright:     	    2009 Bas van Dijk <v.dijk.bas@gmail.com>
+Copyright:     	    2009-2010 Bas van Dijk <v.dijk.bas@gmail.com>
 Cabal-version: 	    >= 1.6
 Build-Type:    	    Simple
 Stability:     	    experimental
