--- a/dstring.cabal
+++ b/dstring.cabal
@@ -1,12 +1,12 @@
 Name:               dstring
-Version:            0.3.0.1
-Synopsis:           Difference strings.
+Version:            0.3.0.2
+Synopsis:           Difference strings
 Description:
   Difference strings: a data structure for O(1) append on strings. Note that a
-  DString is just a newtype wrapper around a 'DList Char'. The reason we need a
-  new type instead of just a type synonym is that we can have an 'instance
-  IsString DString' without using language extensions (TypeSynonymInstances or
-  FlexibleInstances) so we can write overloaded string literals of type DString.
+  @DString@ is just a newtype wrapper around a @DList Char@. The reason we need a
+  new type instead of just a type synonym is that we can have an @instance
+  IsString DString@ without using language extensions (@TypeSynonymInstances@ or
+  @FlexibleInstances@) so we can write overloaded string literals of type @DString@.
 Category:      	    Data
 License:       	    BSD3
 License-file:  	    LICENSE
@@ -23,8 +23,9 @@ Source-repository head
   Location: http://code.haskell.org/~basvandijk/code/dstring
 
 Library
-  Build-Depends:     base == 4.*
-                   , dlist >= 0.5 && < 0.6
-                   , to-string-class >= 0.1.2 && < 0.2
+  Build-Depends: base                 >= 4     && < 4.3
+               , base-unicode-symbols >= 0.1.1 && < 0.3
+               , dlist                >= 0.5   && < 0.6
+               , to-string-class      >= 0.1.2 && < 0.2
   Exposed-modules: Data.DString
   Ghc-options: -Wall
