--- a/dstring.cabal
+++ b/dstring.cabal
@@ -13,6 +13,7 @@ License-file:  	    LICENSE
 Author:        	    Bas van Dijk <v.dijk.bas@gmail.com>
 Maintainer:    	    Bas van Dijk <v.dijk.bas@gmail.com>
 Copyright:     	    2009-2011 Bas van Dijk <v.dijk.bas@gmail.com>
+Bug-Reports:        https://github.com/basvandijk/dstring/issues
 Cabal-version: 	    >= 1.6
 Build-Type:    	    Simple
 Stability:     	    experimental
