--- a/dstring.cabal
+++ b/dstring.cabal
@@ -25,8 +25,10 @@ Source-repository head
   Location: git://github.com/basvandijk/dstring.git
 
 Library
-  Build-Depends: base                 >= 4     && < 4.6
+  Build-Depends: base                 >= 4     && < 5
                , base-unicode-symbols >= 0.1.1 && < 0.3
-               , dlist                >= 0.5   && < 0.6
+               , dlist                >= 0.7   && < 0.9
+  if !impl(ghc >= 8.0)
+    Build-depends: semigroups == 0.18.*
   Exposed-modules: Data.DString
   Ghc-options: -Wall
